# handler/response.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/gabehamasaki/gopportunities-learn-go/schemas"
 	"github.com/gin-gonic/gin"
 )
 
@@ -21,4 +22,14 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
     "message": fmt.Sprintf("operation from handler: %s successfully", op),
     "data": data,
   })
+}
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	ErrorCode int64 `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
 }
